--- a/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
@@ -33,7 +33,9 @@ spec:
     # VM Operator deployment
     victoria-metrics-operator:
       enabled: true
-      cleanupCRD: true
+      crd:
+        cleanup:
+          enabled: true
       operator:
         disable_prometheus_converter: false # Ensure we keep enabled the converter to sync prom rules to VM rules
         enable_converter_ownership: true # Required to allow VM to remove VM rules it imports if a prometheus rule is deleted
