--- a/kubernetes/apps/home/frigate/app/helmrelease.yaml
+++ b/kubernetes/apps/home/frigate/app/helmrelease.yaml
@@ -34,7 +34,7 @@ spec:
   values:
     defaultPodOptions:
       runtimeClassName: nvidia
-      hostNetwork: true
+      # hostNetwork: true
     controllers:
       main:
         annotations:
