--- a/kubernetes/apps/home/frigate/app/resources/config.yml
+++ b/kubernetes/apps/home/frigate/app/resources/config.yml
@@ -144,6 +144,8 @@ go2rtc:
   webrtc:
     candidates:
       - 192.168.108.199:8555
+      - 192.168.108.55:8555
+      - stun:8555
 cameras:
   gates:
     enabled: True
