--- a/kubernetes/apps/observability/victoria-metrics/custom/kustomization.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/custom/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
   - ./scrapes/extrascrapes.yaml
   - ./scrapes/fluxmonitor.yaml
   - ./scrapes/vmpodscrape.yaml
-  - ./scrapes/servicescrape.yaml
+  # - ./scrapes/servicescrape.yaml
   - ./rules/oom.yaml
   - ./rules/victoria.yaml
   - ./rules/longhorn.yaml
