--- a/kubernetes/apps/home/frigate/app/dashboard/kustomization.yaml
+++ b/kubernetes/apps/home/frigate/app/dashboard/kustomization.yaml
@@ -2,17 +2,13 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-resources:
-  - dashboard
-  - ./secret.sops.yaml
-  - ./helmrelease.yaml
-  - ../../../../templates/gatus/guarded
-  - ./pvc.yaml
 configMapGenerator:
-  - name: frigate-configmap
+  - name: frigate-dashboard
     files:
-      - config.yml=./resources/config.yml
+      - frigate-dashboard.json
 generatorOptions:
   disableNameSuffixHash: true
   annotations:
     kustomize.toolkit.fluxcd.io/substitute: disabled
+  labels:
+    grafana_dashboard: "true"
