--- a/kubernetes/apps/home/frigate/app/resources/config.yml
+++ b/kubernetes/apps/home/frigate/app/resources/config.yml
@@ -159,9 +159,13 @@ cameras:
       stream_name: gates_hq
       quality: 1
     webui_url: ""
+    motion:
+      mask:
+        - 1,0.811,0.947,0.76,0.812,0.55,0.84,0.39,0.808,0.304,0.838,0.097,0.876,0,1,0
+        - 0.223,0.643,0.239,0.73,0.23,1,0,1,0.001,0,0.482,0,0.507,0.023,0.133,0.451,0.184,0.69
     zones:
       inside_gates:
-        coordinates: 0.94,0.881,0.946,0.767,0.867,0.64,0.795,0.552,0.743,0.692
+        coordinates: 0.94,0.881,0.946,0.767,0.867,0.64,0.781,0.518,0.724,0.669
         inertia: 5
         loitering_time: 3
         objects:
@@ -176,7 +180,7 @@ cameras:
           - car
           - bus
       guests:
-        coordinates: 0.758,0.398,0.607,0.437,0.396,0.797,0.514,0.944
+        coordinates: 0.739,0.437,0.622,0.446,0.499,0.701,0.552,0.871
         inertia: 5
         loitering_time: 6
         objects:
@@ -217,9 +221,12 @@ cameras:
       stream_name: door_hq
       quality: 1
     webui_url: "https://192.168.108.104/"
+    motion:
+      mask:
+        - 0.002,0.468,0.047,0.437,0.005,0.322,0.005,0.121,0.038,0.095,0.058,0.305,0.111,0.391,0.193,0.332,0.526,0.364,0.547,0.301,0.593,0.296,0.645,0.15,0.657,0.148,0.696,0.099,0.873,0.111,0.979,0.099,0.987,0.062,0.885,0.058,0.891,0.004,0.79,0.001,0.159,0,0,0.101
     zones:
       near_the_door:
-        coordinates: 0.248,1,0.805,1,0.808,0.906,0.328,0.881
+        coordinates: 0.229,0.991,0.864,1,0.911,0.909,0.296,0.871
         inertia: 5
         loitering_time: 3
         objects:
@@ -227,26 +234,33 @@ cameras:
           - dog
           - car
       dvor:
-        coordinates: 0.784,0.478,0.608,0.408,0.511,0.589,0.384,0.792,0.756,0.819
+        coordinates: 0.784,0.478,0.555,0.395,0.462,0.563,0.31,0.847,0.732,0.875
         inertia: 5
         objects:
           - car
           - person
       tropinka:
-        coordinates: 0.894,0.565,0.87,0.145,0.831,0.146,0.818,0.547
+        coordinates: 0.893,0.454,0.875,0.145,0.82,0.149,0.816,0.461
+        inertia: 5
+        loitering_time: 3
+        objects:
+          - person
+          - dog
+      kuhnya:
+        coordinates: 0.793,0.486,0.775,0.601,0.895,0.593,0.894,0.485
         inertia: 5
         loitering_time: 3
         objects:
           - person
           - dog
       parkovka:
-        coordinates: 0.806,0.475,0.806,0.261,0.617,0.222,0.567,0.383
+        coordinates: 0.806,0.475,0.81,0.172,0.648,0.156,0.567,0.383
         inertia: 5
         objects:
           - person
           - dog
       sad:
-        coordinates: 0.527,0.536,0.509,0,0.106,0.186,0,0.247,0,1,0.195,1
+        coordinates: 0.518,0.419,0.519,0.368,0.197,0.339,0,0.476,0,1,0.18,0.991
         inertia: 5
         objects:
           - person
@@ -294,28 +308,43 @@ cameras:
       quality: 1
     webui_url: "https://192.168.108.210/"
     motion:
-      mask: []
+      mask:
+        - 0.643,0.507,0.729,1,1,1,0.998,0.521,1,0.163,0.876,0.061,0.778,0,0.594,0,0.594,0.077,0.637,0.134
     zones:
-      before_gates:
-        coordinates: 0.377,0.412,0.616,0.388,0.587,0.044,0.45,0.044,0.416,0.062,0.422,0.16
+      before_gates_1:
+        coordinates: 0.395,0.277,0.362,0.416,0.617,0.404,0.603,0.264
+        inertia: 5
+        loitering_time: 3
+        objects:
+          - person
+          - car
+      before_gates_2:
+        coordinates: 0.396,0.269,0.601,0.257,0.585,0.028,0.455,0.035,0.409,0.045,0.416,0.167
         inertia: 5
         loitering_time: 3
         objects:
           - person
           - car
       at_the_door:
-        coordinates: 0.186,0.654,0.308,0.667,0.349,0.369,0.254,0.383
+        coordinates: 0.168,0.7,0.29,0.718,0.366,0.355,0.259,0.364
         inertia: 5
         loitering_time: 3
         objects:
           - person
       in_the_garden:
-        coordinates: 1,1,1,0.154,0.842,0.044,0.688,0,0.599,0.085,0.722,1
+        coordinates: 0.638,0.454,0.634,0.137,0.596,0.085,0.626,0.424
         inertia: 5
         loitering_time: 2
         objects:
           - person
-      driveway:
+      driveway_1:
+        coordinates: 0.298,0.746,0.213,0.871,0.184,0.997,0.688,0.997,0.66,0.747
+        inertia: 5
+        loitering_time: 2
+        objects:
+          - person
+          - car
+      driveway_2:
         coordinates: 0.237,1,0.698,1,0.613,0.412,0.356,0.425
         inertia: 5
         loitering_time: 2
@@ -360,22 +389,22 @@ cameras:
     webui_url: "http://192.168.108.122:8899/"
     motion:
       mask:
-        - 0.04,0.991,0.001,0.996,0.001,0.001,0.996,0.003,0.999,0.996,0.892,0.554,0.804,0.154,0.483,0.154,0.351,0.456,0.276,0.538,0.121,0.547
+        - 0.049,1,0.001,0.996,0.001,0.001,0.996,0.003,0.999,0.996,0.772,1,0.715,0.791,0.892,0.564,0.819,0.299,0.658,0.304,0.531,0.161,0.485,0.243,0.513,0.498,0.463,0.538,0.359,0.541,0.276,0.545,0.123,0.548
     zones:
       kacheli:
-        coordinates: 0.658,0.567,0.655,0.311,0.817,0.308,0.886,0.556
+        coordinates: 0.711,0.783,0.593,0.315,0.817,0.308,0.888,0.563
         inertia: 5
         loitering_time: 3
         objects:
           - person
       dom2_tropinka:
-        coordinates: 0.52,0.353,0.597,0.353,0.762,1,0.598,1
+        coordinates: 0.517,0.339,0.59,0.331,0.762,1,0.598,1
         inertia: 5
         loitering_time: 2
         objects:
           - person
       lavka:
-        coordinates: 0.127,0.556,0.441,0.544,0.441,1,0.053,1
+        coordinates: 0.127,0.556,0.518,0.541,0.564,1,0.053,1
         inertia: 5
         loitering_time: 2
         objects:
@@ -415,7 +444,8 @@ cameras:
       quality: 1
     motion:
       mask:
-        - 0.205,0.787,0.31,0.416,0.479,0.407,0.48,0.318,0.492,0.226,0.551,0.213,0.631,0.125,0.655,0.004,0.001,0.001,0.002,0.387
+        - 0.205,0.796,0.312,0.417,0.479,0.407,0.48,0.318,0.522,0.255,0.582,0.194,0.646,0.145,0.655,0.004,0.001,0.001,0,0.413
+        - 0.72,0.281,0.996,0.694,1,0.291,0.661,0.058,0.648,0.203
     zones:
       u_okna:
         coordinates: 0,1,0,0.425,0.199,0.796,0.141,1
