--- a/kubernetes/apps/home/frigate/app/resources/config.yml
+++ b/kubernetes/apps/home/frigate/app/resources/config.yml
@@ -311,7 +311,7 @@ cameras:
       mask:
         - 0.643,0.507,0.729,1,1,1,0.998,0.521,1,0.163,0.876,0.061,0.778,0,0.594,0,0.594,0.077,0.637,0.134
     zones:
-      before_gates_1:
+      before_gates:
         coordinates: 0.395,0.277,0.362,0.416,0.617,0.404,0.603,0.264
         inertia: 5
         loitering_time: 3
@@ -337,7 +337,7 @@ cameras:
         loitering_time: 2
         objects:
           - person
-      driveway_1:
+      driveway:
         coordinates: 0.298,0.746,0.213,0.871,0.184,0.997,0.688,0.997,0.66,0.747
         inertia: 5
         loitering_time: 2
@@ -358,9 +358,11 @@ cameras:
           - person
         required_zones:
           - before_gates
+          - before_gates_2
           - at_the_door
           - in_the_garden
           - driveway
+          - driveway_2
     mqtt:
       enabled: True
       timestamp: False
