--- a/kubernetes/apps/home/frigate/app/resources/config.yml
+++ b/kubernetes/apps/home/frigate/app/resources/config.yml
@@ -222,6 +222,9 @@ cameras:
           input_args: preset-rtsp-restream
           roles:
             - detect
+    detect:
+      width: 704
+      height: 576
     live:
       stream_name: door_hq
       quality: 1
