--- a/kubernetes/apps/home/frigate/app/resources/config.yml
+++ b/kubernetes/apps/home/frigate/app/resources/config.yml
@@ -142,6 +142,7 @@ go2rtc:
       - 192.168.108.115:8555
       - 192.168.108.212:8555
       - 192.168.108.200:8555
+      - stun:8555
 cameras:
   gates:
     enabled: True
