--- a/kubernetes/apps/home/frigate/app/resources/config.yml
+++ b/kubernetes/apps/home/frigate/app/resources/config.yml
@@ -527,7 +527,7 @@ camera_groups:
       - gates
       - dvor_gates
       - dom2
-      - street
+      # - street
       - door
     icon: LuCar
     order: 0
