--- a/kubernetes/apps/observability/victoria-metrics/custom/kustomization.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/custom/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 resources:
   - ./scrapes/extrascrapes.yaml
   - ./scrapes/fluxmonitor.yaml
-  - ./scrapes/vmpodscrape.yaml
+  # - ./scrapes/vmpodscrape.yaml
   # - ./scrapes/servicescrape.yaml
   - ./rules/oom.yaml
   - ./rules/victoria.yaml
