--- a/kubernetes/apps/media/immich/ks.yaml
+++ b/kubernetes/apps/media/immich/ks.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: immich
+  name: &app immich
   namespace: flux-system
 spec:
   targetNamespace: media
