--- a/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
+++ b/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
@@ -62,7 +62,7 @@ spec:
         annotations:
           io.cilium/lb-ipam-ips: 192.168.108.77
         type: LoadBalancer
-        externalTrafficPolicy: Cluster
+        # externalTrafficPolicy: Cluster
         ports:
           http:
             port: 8096
