--- a/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
+++ b/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
@@ -31,7 +31,7 @@ spec:
       service:
         annotations:
           io.cilium/lb-ipam-ips: "192.168.108.200"
-        externalTrafficPolicy: Cluster
+        # externalTrafficPolicy: Cluster
       ingressClassResource:
         name: internal
         default: true
