--- a/kubernetes/apps/network/k8s-gateway/app/helmrelease.yaml
+++ b/kubernetes/apps/network/k8s-gateway/app/helmrelease.yaml
@@ -31,4 +31,4 @@ spec:
       port: 53
       annotations:
         io.cilium/lb-ipam-ips: "192.168.108.100"
-      externalTrafficPolicy: Cluster
+      # externalTrafficPolicy: Cluster
