--- a/kubernetes/apps/home/frigate/app/helmrelease.yaml
+++ b/kubernetes/apps/home/frigate/app/helmrelease.yaml
@@ -110,6 +110,7 @@ spec:
           nginx.org/proxy-read-timeout: "3600"
           nginx.org/proxy-send-timeout: "3600"
           nginx.org/websocket-services: "frigate"
+          ingress.cilium.io/loadbalancer-mode: "dedicated"
         className: cilium
         hosts:
           - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
