--- a/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
@@ -40,7 +40,7 @@ spec:
         loadbalancerIP: true
         podCIDR: false
     ingressController:
-      enabled: true
+      enabled: false
       default: false
       loadbalancerMode: dedicated
       # hostNetwork:
