--- a/kubernetes/apps/database/cloudnative-pg/cluster/cluster16.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/cluster16.yaml
@@ -6,7 +6,8 @@ metadata:
   name: postgres16
 spec:
   instances: 1
-  imageName: ghcr.io/cloudnative-pg/postgresql:16.1-17
+  imageName: ghcr.io/tensorchord/cloudnative-pgvecto.rs:16.4
+  # imageName: ghcr.io/cloudnative-pg/postgresql:16.1-17
   primaryUpdateStrategy: unsupervised
   storage:
     size: 100Gi
@@ -19,6 +20,8 @@ spec:
       max_connections: "600"
       max_slot_wal_keep_size: 10GB
       shared_buffers: 512MB
+    shared_preload_libraries:
+      - "vectors.so"
   resources:
     requests:
       cpu: 100m
