--- a/kubernetes/apps/home/frigate/app/resources/config.yml
+++ b/kubernetes/apps/home/frigate/app/resources/config.yml
@@ -158,7 +158,7 @@ cameras:
     detect:
       width: 848
       height: 480
-      fps: 5
+      fps: 10
       enabled: True
     live:
       stream_name: gates_hq
@@ -167,8 +167,10 @@ cameras:
     motion:
       mask:
         - 1,0.811,0.947,0.76,0.812,0.55,0.84,0.39,0.808,0.304,0.838,0.097,0.876,0,1,0
-        - 0.223,0.643,0.239,0.73,0.23,1,0,1,0.001,0,0.482,0,0.507,0.023,0.133,0.451,0.184,0.69
+        - 0.257,0.604,0.256,1,0.23,1,0,1,0.001,0,0.482,0,0.507,0.023,0.177,0.403,0.234,0.631
         - 0.669,0.619,0.72,0.664,0.781,0.509,0.808,0.544,0.835,0.393,0.804,0.311,0.825,0.163,0.804,0.141,0.764,0.204,0.667,0.437,0.746,0.43
+      threshold: 80
+      contour_area: 70
     zones:
       inside_gates:
         coordinates: 0.94,0.881,0.946,0.767,0.867,0.64,0.781,0.518,0.724,0.669
@@ -179,7 +181,7 @@ cameras:
           - dog
           - car
       entryway:
-        coordinates: 0.571,0.171,0.461,0.085,0.139,0.454,0.187,0.682
+        coordinates: 0.571,0.171,0.461,0.085,0.181,0.405,0.236,0.624
         inertia: 5
         loitering_time: 5
         objects:
