--- a/kubernetes/apps/home/frigate/app/resources/config.yml
+++ b/kubernetes/apps/home/frigate/app/resources/config.yml
@@ -411,6 +411,8 @@ cameras:
     motion:
       mask:
         - 0.049,1,0.001,0.996,0.001,0.001,0.996,0.003,0.999,0.996,0.648,1,0.62,0.849,0.746,0.744,0.735,0.637,0.581,0.635,0.578,0.463,0.532,0.47,0.517,0.51,0.526,0.698,0.359,0.718,0.215,0.738,0.057,0.928
+      threshold: 55
+      contour_area: 40
     zones:
       kacheli:
         coordinates: 0.619,0.838,0.581,0.642,0.736,0.645,0.74,0.74
