--- a/kubernetes/apps/media/immich/app/secret.sops.yaml
+++ b/kubernetes/apps/media/immich/app/secret.sops.yaml
@@ -6,13 +6,14 @@ stringData:
     #ENC[AES256_GCM,data:es1wDVDasg==,iv:iPW4f/RL1D0N1sSnzL8YpT679M3Pmxtue6ynYtWeZX8=,tag:8I2NAzW0b/mdI2wTekvxKQ==,type:comment]
     DB_DATABASE_NAME: ENC[AES256_GCM,data:MfacrKRghLA=,iv:hx5cMuOrPEc3fg6jw+j7nHoM+Ni6Iqr+5Ztqo0TNehg=,tag:/0AMsfFpvyQZs1mFB++FcQ==,type:str]
     DB_HOSTNAME: ENC[AES256_GCM,data:mHdCVVEr+0affoCdnq0zeAZyDRJWJn1+wGbMaeDdOj8fL3PnVLo1nQ==,iv:QkTz9AjWROlhu1id4pH/VzOY6fCe9Vy2ldjFq+ZDFRw=,tag:4m1yYHVBH2jnzeBbd3PP+Q==,type:str]
-    DB_USERNAME: ENC[AES256_GCM,data:Q56844u4akdKxw==,iv:wtUScO5vCqP02C9ysKCFLFBygErDsaMmhpFcMJNp3qc=,tag:Ocf/nknPiNXCg/zrQ+D5OA==,type:str]
-    DB_PASSWORD: ENC[AES256_GCM,data:myK+Shx0DCuSQjMBOq+7zro=,iv:kT8ECFXuU68EgM2+RSc2oBgu8qyM6IQB5NjwWRUmct0=,tag:zU6EPeFMZ5qQV1krEqXK5A==,type:str]
+    DB_USERNAME: ENC[AES256_GCM,data:Ixe8FLtceIg=,iv:sFo3kc9u2mSnAURU1QeoiW6k/0RSncy/yo7wm50Tr+E=,tag:XFJX3f2fOoZDNXajMzZHzA==,type:str]
+    DB_PASSWORD: ENC[AES256_GCM,data:07zwaBXbZ5E8LHgZgUEslYyQ3OxWtA==,iv:XpPNmyEfz+jLLWRgyUiOxDc77jyMSZhx0LKZQG3S/v8=,tag:PWuMuEOXSQSt336avbzehw==,type:str]
+    #ENC[AES256_GCM,data:2VxUL51t3IVavOPID/K4R1/+,iv:odqxgR6bcxi46J4X7epvLDyWfGwcEPqqVAtdogUxsLU=,tag:b9P4UGoxW4I0AXKV7Vz3Hg==,type:comment]
     JWT_SECRET: ENC[AES256_GCM,data:Hjh9077wgBsFMt4kiYN4X1SsfEU=,iv:+AJ0/BEWsfr59sT1+Kag9fiQt4GhBn2jXQNtcWkUm+M=,tag:9NhokJ0xpX01FgBdhhy4ow==,type:str]
     #ENC[AES256_GCM,data:xRZV2uxW6WyPf41HxJE=,iv:c0uFQQgBzcYvp+3ujmpC+c2Tk/p+N8l28Ik31fxi9dY=,tag:jQEw+BsFmHPZyMg8duAorg==,type:comment]
     INIT_POSTGRES_DBNAME: ENC[AES256_GCM,data:1fQWWoqmvUA=,iv:Hyh3NDUkAiPBUZq6LSs/ILqTir5nCzeDMZLobkuuz7Y=,tag:yZmFkvOpG0D3XEdsMsb3mQ==,type:str]
     INIT_POSTGRES_HOST: ENC[AES256_GCM,data:hGGdOkLqdvGZ6OMP8Gocu91aKqxQUGSrI0SUqfEMwbwDB0PsVrPaeQ==,iv:IoFfffv6oyH/EhgUPepBKatrGbgo6AsSiKbnMVbLUDA=,tag:ksB69BJAiT4H7cHRj0TNvg==,type:str]
-    INIT_POSTGRES_USER: ENC[AES256_GCM,data:lwutlUQ36uJ3WA==,iv:vLlWucbVUf1zFpzxwHS+rxJdoSlXu1Vpc5avLVqEzD8=,tag:MjAhuwNwd/Syo9txaNxPHA==,type:str]
+    INIT_POSTGRES_USER: ENC[AES256_GCM,data:U4PQ96AR81vqpg==,iv:1Pc1+IsN6P5IowEjzhsy4QsBtyHvx7QIt8QBFyYuEok=,tag:ElujOrKivYNMqndt2hKTBQ==,type:str]
     INIT_POSTGRES_PASS: ENC[AES256_GCM,data:AWlkXV6IiE+MFooizBNQsFY=,iv:dR4iKO8N95l0tD+RldS94ulIYEWQOXzROVqQRGzK2HQ=,tag:XJDc5qxGITnMXyR0np3U6w==,type:str]
     INIT_POSTGRES_SUPER_PASS: ENC[AES256_GCM,data:7eKyvTaeItrvTHJ/3hY8mA054IHKbw==,iv:6ia7ZLSF8zYsxCEOVGW8KqvSIx+I04nbqbPv4GEUzP0=,tag:6bx8bP3sbfKnAWOmZ00xAw==,type:str]
 sops:
@@ -30,8 +31,8 @@ sops:
             L3FmQzByN1RYUWk0RTA2N0h3NU13dDQKqr3SQSwn4dZokzOOMvfXq43X8VH3W86D
             xA/LmESCF4Ha21oloczcKZ+URH/4oWoK8HvXGcDVnIH0SSQ1gJKuog==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-12T19:02:24Z"
-    mac: ENC[AES256_GCM,data:s1E15SslsaUh8ZFIwXdzZrTXzVnIPe8moOBwVJ32RcwnloWwS4mHWbJwGDvfEjgvq1IlhrQAtjWMPMq812XH4vMZqO/A63f/I4rcmwx0zwBIST8tj2vo76WRSzuEEwUnX2Vv4MBHxHhDv50ptosW8aSssTDPHkwTO+yjPAE8oF8=,iv:nYSRbubU1Sv4WEhTAcHYNqA4035FzUfFDF1/D9lhVxY=,tag:sBYFkvGl5w5qB3WXlpmTOg==,type:str]
+    lastmodified: "2024-10-15T22:18:25Z"
+    mac: ENC[AES256_GCM,data:n7yOzYRC/ZXxgWzXHbqWFEdkBgN6a+Di2DbbI3kTZa+FPLU7Sh84DklFThPfGrUam99PszL3vdCGJSJyKy3DSli7y9v9jIj5TV3Qm+d+slB1W0q6j+yt0WLOdnVPkYeEkVZHasnSwGjEk5cRDs+/uGs+lNp95wbnfcySm6R/KfY=,iv:ZFGB1p7JcnC2qta6B90wb0qA+1zE4eyC1ScJ1vzMD8k=,tag:StpC2qTJ+ufC5hsLWjWWig==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.0
