--- a/kubernetes/apps/media/immich/app/secret.sops.yaml
+++ b/kubernetes/apps/media/immich/app/secret.sops.yaml
@@ -6,9 +6,8 @@ stringData:
     #ENC[AES256_GCM,data:es1wDVDasg==,iv:iPW4f/RL1D0N1sSnzL8YpT679M3Pmxtue6ynYtWeZX8=,tag:8I2NAzW0b/mdI2wTekvxKQ==,type:comment]
     DB_DATABASE_NAME: ENC[AES256_GCM,data:MfacrKRghLA=,iv:hx5cMuOrPEc3fg6jw+j7nHoM+Ni6Iqr+5Ztqo0TNehg=,tag:/0AMsfFpvyQZs1mFB++FcQ==,type:str]
     DB_HOSTNAME: ENC[AES256_GCM,data:mHdCVVEr+0affoCdnq0zeAZyDRJWJn1+wGbMaeDdOj8fL3PnVLo1nQ==,iv:QkTz9AjWROlhu1id4pH/VzOY6fCe9Vy2ldjFq+ZDFRw=,tag:4m1yYHVBH2jnzeBbd3PP+Q==,type:str]
-    DB_USERNAME: ENC[AES256_GCM,data:Ixe8FLtceIg=,iv:sFo3kc9u2mSnAURU1QeoiW6k/0RSncy/yo7wm50Tr+E=,tag:XFJX3f2fOoZDNXajMzZHzA==,type:str]
-    DB_PASSWORD: ENC[AES256_GCM,data:07zwaBXbZ5E8LHgZgUEslYyQ3OxWtA==,iv:XpPNmyEfz+jLLWRgyUiOxDc77jyMSZhx0LKZQG3S/v8=,tag:PWuMuEOXSQSt336avbzehw==,type:str]
-    #ENC[AES256_GCM,data:2VxUL51t3IVavOPID/K4R1/+,iv:odqxgR6bcxi46J4X7epvLDyWfGwcEPqqVAtdogUxsLU=,tag:b9P4UGoxW4I0AXKV7Vz3Hg==,type:comment]
+    DB_USERNAME: ENC[AES256_GCM,data:KmC/dTLUA9LJbg==,iv:oh9pysA1q5ixqtp+1SsSoIoehm31a8TD4+vhvqWTjHs=,tag:DfRHCe2s9kO1zLPBDkhzRQ==,type:str]
+    DB_PASSWORD: ENC[AES256_GCM,data:hi+BVDETOhcAE/J5vRtWvRk=,iv:UfyKodElz56/7gT4yWjHLtXle4r/tsT47USzK/p8NR0=,tag:3qwiM2HhordEG28WNhhHrg==,type:str]
     JWT_SECRET: ENC[AES256_GCM,data:Hjh9077wgBsFMt4kiYN4X1SsfEU=,iv:+AJ0/BEWsfr59sT1+Kag9fiQt4GhBn2jXQNtcWkUm+M=,tag:9NhokJ0xpX01FgBdhhy4ow==,type:str]
     #ENC[AES256_GCM,data:xRZV2uxW6WyPf41HxJE=,iv:c0uFQQgBzcYvp+3ujmpC+c2Tk/p+N8l28Ik31fxi9dY=,tag:jQEw+BsFmHPZyMg8duAorg==,type:comment]
     INIT_POSTGRES_DBNAME: ENC[AES256_GCM,data:1fQWWoqmvUA=,iv:Hyh3NDUkAiPBUZq6LSs/ILqTir5nCzeDMZLobkuuz7Y=,tag:yZmFkvOpG0D3XEdsMsb3mQ==,type:str]
@@ -31,8 +30,8 @@ sops:
             L3FmQzByN1RYUWk0RTA2N0h3NU13dDQKqr3SQSwn4dZokzOOMvfXq43X8VH3W86D
             xA/LmESCF4Ha21oloczcKZ+URH/4oWoK8HvXGcDVnIH0SSQ1gJKuog==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-15T22:18:25Z"
-    mac: ENC[AES256_GCM,data:n7yOzYRC/ZXxgWzXHbqWFEdkBgN6a+Di2DbbI3kTZa+FPLU7Sh84DklFThPfGrUam99PszL3vdCGJSJyKy3DSli7y9v9jIj5TV3Qm+d+slB1W0q6j+yt0WLOdnVPkYeEkVZHasnSwGjEk5cRDs+/uGs+lNp95wbnfcySm6R/KfY=,iv:ZFGB1p7JcnC2qta6B90wb0qA+1zE4eyC1ScJ1vzMD8k=,tag:StpC2qTJ+ufC5hsLWjWWig==,type:str]
+    lastmodified: "2024-10-15T22:20:10Z"
+    mac: ENC[AES256_GCM,data:mPnkmN5/jwiN55k70nJHNZom43vHgPLA0y/rjVB2eU3+6iTcv6hDa5cBZhb68pU+SI34PTeYZVJZ5mXx8OPUFrD9vsYYUbFe+6XdI0tvaBnSkpMcgbM7SA7CVPAy/llAzah1Wrwy1hHZQhM0XNnpzoJKbpH5cx78RpxVJeFf0y0=,iv:8ldTTQNhd5OcR8uLU8PDvRx3gQIU9ETbxdWH+KQ92oA=,tag:qZG5LYbuAFfCJIiAAQ8K5A==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.0
