--- a/kubernetes/apps/media/immich/app/microservices/pvc.yaml
+++ b/kubernetes/apps/media/immich/app/microservices/pvc.yaml
@@ -4,7 +4,7 @@ metadata:
   name: immich-upload
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 200Gi
