--- a/kubernetes/apps/media/immich/app/microservices/helmrelease.yaml
+++ b/kubernetes/apps/media/immich/app/microservices/helmrelease.yaml
@@ -42,7 +42,7 @@ spec:
               - configMapRef:
                   name: immich-configmap
               - secretRef:
-                  name: immich-secret
+                  name: immich
               - secretRef:
                   name: immich-db-secret
             resources:
