--- a/kubernetes/apps/media/immich/app/server/helmrelease.yaml
+++ b/kubernetes/apps/media/immich/app/server/helmrelease.yaml
@@ -40,6 +40,10 @@ spec:
               tag: '16.3'
         strategy: RollingUpdate
         containers:
+          app-run:
+            image: ubuntu:latest
+            command: [ "/bin/bash", "-c", "--" ]
+            args: [ "while true; do sleep 30; done;" ]
           app:
             image:
               repository: ghcr.io/immich-app/immich-server
