--- a/kubernetes/apps/media/immich/app/server/helmrelease.yaml
+++ b/kubernetes/apps/media/immich/app/server/helmrelease.yaml
@@ -42,7 +42,8 @@ spec:
         containers:
           app-run:
             image:
-              repository: ubuntu:latest
+              repository: ubuntu
+              tag: latest
             command: [ "/bin/bash", "-c", "--" ]
             args: [ "while true; do sleep 30; done;" ]
           app:
