--- a/kubernetes/apps/service/stunner/operator/helmrelease.yaml
+++ b/kubernetes/apps/service/stunner/operator/helmrelease.yaml
@@ -49,11 +49,11 @@ spec:
               - --metrics-bind-address=127.0.0.1:8080
               - --leader-elect
               - --zap-log-level=info
-          kubeRbacProxy:
-            image:
-              name: gcr.io/kubebuilder/kube-rbac-proxy
-              pullPolicy: IfNotPresent
-              tag: v0.16.0
+          # kubeRbacProxy:
+          #   image:
+          #     name: gcr.io/kubebuilder/kube-rbac-proxy
+          #     pullPolicy: IfNotPresent
+          #     tag: v0.16.0
       dataplane:
         # Can be 'legacy' or 'managed'
         # default is managed
