--- a/kubernetes/apps/service/stunner/ks.yaml
+++ b/kubernetes/apps/service/stunner/ks.yaml
@@ -3,7 +3,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app stunner
+  name: &app stunner-gateway
   namespace: flux-system
 spec:
   targetNamespace: service
@@ -11,6 +11,30 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   path: ./kubernetes/apps/service/stunner/operator
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: home-kubernetes
+  wait: false
+  interval: 30m
+  retryInterval: 1m
+  timeout: 5m
+  postBuild:
+    substitute:
+      APP: *app
+---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/kustomization-kustomize-v1.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: &app stunner
+  namespace: flux-system
+spec:
+  targetNamespace: service
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *app
+  path: ./kubernetes/apps/service/stunner/app
   prune: true
   sourceRef:
     kind: GitRepository
