--- a/kubernetes/apps/service/stunner/app/gatewayconfig.yaml
+++ b/kubernetes/apps/service/stunner/app/gatewayconfig.yaml
@@ -6,6 +6,6 @@ metadata:
   namespace: service
 spec:
   realm: stunner.l7mp.io
-  # authRef:
-  #   name: stunner-auth-secret
-  #   namespace: stunner
+  authRef:
+    name: stunner-auth-secret
+    namespace: stunner
