--- a/kubernetes/apps/home/frigate/app/resources/config.yml
+++ b/kubernetes/apps/home/frigate/app/resources/config.yml
@@ -236,6 +236,8 @@ cameras:
     motion:
       mask:
         - 0.002,0.468,0.32,0.566,0.37,0.46,0.383,0.413,0.474,0.088,0.744,0.109,0.747,0.011,0.799,0.009,0.87,0.6,0.859,0.604,0.838,0.871,0.739,0.852,0.736,0.893,0.698,0.889,0.678,1,1,1,1,0,0,0
+      threshold: 80
+      contour_area: 70
     zones:
       near_the_door:
         coordinates: 0.096,1,0.67,1,0.689,0.895,0.171,0.855
