--- a/kubernetes/apps/service/stunner/app/udproute.yaml
+++ b/kubernetes/apps/service/stunner/app/udproute.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   parentRefs:
     - name: frigate-udp-gateway
-    - name: frigate-tcp-gateway
+    # - name: frigate-tcp-gateway
   rules:
     - backendRefs:
       - name: frigate
