--- a/kubernetes/apps/service/stunner/app/kustomization.yaml
+++ b/kubernetes/apps/service/stunner/app/kustomization.yaml
@@ -8,4 +8,5 @@ resources:
   - ./secret.sops.yaml
   - ./gatewayconfig.yaml
   - ./gateway.yaml
+  - ./udproute.yaml
   - ../../../../templates/gatus/guarded
