--- a/kubernetes/apps/media/immich/app/microservices/helmrelease.yaml
+++ b/kubernetes/apps/media/immich/app/microservices/helmrelease.yaml
@@ -43,6 +43,21 @@ spec:
                   name: immich-configmap
               - secretRef:
                   name: immich
+            probes:
+              liveness: &probes
+                enabled: true
+                custom: true
+                spec:
+                  httpGet:
+                    path: /api/server-info/ping
+                    port: 3001
+                  initialDelaySeconds: 0
+                  periodSeconds: 10
+                  timeoutSeconds: 1
+                  failureThreshold: 5
+              readiness: *probes
+              startup:
+                enabled: false
             resources:
               requests:
                 cpu: 10m
