--- a/kubernetes/apps/media/immich/app/server/helmrelease.yaml
+++ b/kubernetes/apps/media/immich/app/server/helmrelease.yaml
@@ -54,7 +54,7 @@ spec:
                 custom: true
                 spec:
                   httpGet:
-                    path: /server-info/ping
+                    path: /api/server-info/ping
                     port: 3001
                   initialDelaySeconds: 0
                   periodSeconds: 10
