--- a/kubernetes/apps/media/immich/app/microservices/helmrelease.yaml
+++ b/kubernetes/apps/media/immich/app/microservices/helmrelease.yaml
@@ -37,6 +37,7 @@ spec:
               tag: v1.118.2@sha256:f158810c90f80162f9b08729bbaec963731f12662960be38ff93093b78a0bbdf
             env:
               TZ: ${TIMEZONE}
+              SERVER_PORT: &port 3001
               IMMICH_WORKERS_EXCLUDE: api
             envFrom:
               - configMapRef:
@@ -46,6 +47,15 @@ spec:
             probes:
               liveness: &probes
                 enabled: true
+                custom: true
+                spec:
+                  httpGet:
+                    path: /api/server-info/ping
+                    port: 3001
+                  initialDelaySeconds: 0
+                  periodSeconds: 10
+                  timeoutSeconds: 1
+                  failureThreshold: 5
               readiness: *probes
               startup:
                 enabled: false
