--- a/kubernetes/apps/media/immich/app/server/helmrelease.yaml
+++ b/kubernetes/apps/media/immich/app/server/helmrelease.yaml
@@ -47,7 +47,6 @@ spec:
             env:
               TZ: ${TIMEZONE}
               IMMICH_WORKERS_INCLUDE: api
-              SERVER_PORT: &port 2283
             envFrom: *envFrom
             probes:
               liveness: &probes
@@ -56,7 +55,7 @@ spec:
                 spec:
                   httpGet:
                     path: /api/server/ping
-                    port: *port
+                    port: 2283
                   initialDelaySeconds: 0
                   periodSeconds: 10
                   timeoutSeconds: 1
