--- a/kubernetes/apps/media/immich/app/kustomization.yaml
+++ b/kubernetes/apps/media/immich/app/kustomization.yaml
@@ -6,5 +6,6 @@ resources:
   - ./configmap.yaml
   - ./secret.sops.yaml
   - ./machine-learning
+  - ./microservices
   - ./server
   - ../../../../templates/gatus/external
