--- a/kubernetes/apps/home/frigate/app/helmrelease.yaml
+++ b/kubernetes/apps/home/frigate/app/helmrelease.yaml
@@ -113,7 +113,8 @@ spec:
           nginx.org/proxy-read-timeout: "3600"
           nginx.org/proxy-send-timeout: "3600"
           nginx.org/websocket-services: "frigate"
-        className: internal
+          io.cilium/lb-ipam-ips: 192.168.108.99
+        className: cilium
         hosts:
           - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
             paths:
