--- a/kubernetes/apps/service/stunner/app/gateway.yaml
+++ b/kubernetes/apps/service/stunner/app/gateway.yaml
@@ -14,7 +14,7 @@ spec:
 apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
-  name: frigate-tcp-gateway
+  name: headless-gateway
   namespace: service
 spec:
   gatewayClassName: stunner-gatewayclass
