--- a/kubernetes/apps/service/stunner/app/udproute.yaml
+++ b/kubernetes/apps/service/stunner/app/udproute.yaml
@@ -7,8 +7,20 @@ metadata:
 spec:
   parentRefs:
     - name: frigate-udp-gateway
-    - name: frigate-tcp-gateway
   rules:
     - backendRefs:
         - name: frigate
           namespace: home
+---
+apiVersion: stunner.l7mp.io/v1
+kind: UDPRoute
+metadata:
+  name: headless
+  namespace: service
+spec:
+  parentRefs:
+    - name: headless-gateway
+  rules:
+    - backendRefs:
+        - name: headless-gateway
+          namespace: servive
