--- a/kubernetes/apps/home/frigate/app/resources/config.yml
+++ b/kubernetes/apps/home/frigate/app/resources/config.yml
@@ -139,7 +139,7 @@ go2rtc:
   webrtc:
     candidates:
       - 192.168.108.55:8555
-      # - 192.168.108.11:3478
+      - headless-gateway.service.svc:3478
 cameras:
   gates:
     enabled: True
