--- a/kubernetes/apps/ai/namespace.yaml
+++ b/kubernetes/apps/ai/namespace.yaml
@@ -3,5 +3,6 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: ai
-  # labels:
+  labels:
+    goldilocks.fairwinds.com/enabled: "true"
   #   kustomize.toolkit.fluxcd.io/prune: disabled
