--- a/kubernetes/apps/security/namespace.yaml
+++ b/kubernetes/apps/security/namespace.yaml
@@ -3,7 +3,6 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: security
-  # annotations:
-  #   volsync.backube/privileged-movers: "true"
-  # labels:
+  labels:
+    goldilocks.fairwinds.com/enabled: "true"
   #   kustomize.toolkit.fluxcd.io/prune: disabled
