--- a/kubernetes/apps/service/namespace.yaml
+++ b/kubernetes/apps/service/namespace.yaml
@@ -3,5 +3,6 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: service
-  # labels:
+  labels:
+    goldilocks.fairwinds.com/enabled: "true"
   #   kustomize.toolkit.fluxcd.io/prune: disabled
