--- a/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
@@ -196,6 +196,7 @@ spec:
         shardCount: 2
         extraArgs:
           sortLabels: "true"
+          promscrape.maxScrapeSize: "100MB"
         scrapeInterval: "30s"
         additionalScrapeConfigs:
           name: vm-additional-scrape-configs
